--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-rating": "^2.0.5",
     "swiper": "^12.0.3",
     "yup": "^1.7.1"
   },
