--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-range": "^1.10.0",
     "swiper": "^12.0.3",
     "yup": "^1.7.1"
   },
