--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-responsive": "^10.0.1",
     "react-rating": "^2.0.5",
+    "react-responsive": "^10.0.1",
     "swiper": "^12.0.3",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
