--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "next": "15.5.6",
