--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
