--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-range": "^1.10.0",
     "react-rating": "^2.0.5",
     "react-responsive": "^10.0.1",
     "swiper": "^12.0.3",
