--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-rating": "^2.0.5",
     "react-responsive": "^10.0.1",
     "swiper": "^12.0.3",
+    "use-debounce": "^10.0.6",
     "yup": "^1.7.1",
     "zustand": "^5.0.8"
   },
