--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@tanstack/react-query": "^5.90.7",
+    "@tolgee/react": "^6.2.7",
+    "@tolgee/ui": "^4.9.2",
+    "@tolgee/web": "^6.2.7",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
