--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^3.29.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@formkit/auto-animate": "^0.9.0",
     "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
