--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "modern-normalize": "^3.0.1",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
+    "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
