--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.553.0",
     "modern-normalize": "^3.0.1",
     "next": "15.5.6",
+    "next-intl": "^4.5.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
