--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-rating": "^2.0.5",
     "react-remove-scroll": "^2.7.1",
     "react-responsive": "^10.0.1",
+    "react-select": "^5.10.2",
     "swiper": "^12.0.3",
     "use-debounce": "^10.0.6",
     "yup": "^1.7.1",
